// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) collapses whitespace into single space character 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "escaped": true,
      "hash": Object {
        "pairs": Array [],
        "type": "Hash",
      },
      "params": Array [],
      "path": Object {
        "data": false,
        "original": "foo",
        "parts": Array [
          "foo",
        ],
        "this": false,
        "type": "PathExpression",
      },
      "type": "MustacheStatement",
    },
    Object {
      "chars": " ",
      "type": "TextNode",
    },
    Object {
      "escaped": true,
      "hash": Object {
        "pairs": Array [],
        "type": "Hash",
      },
      "params": Array [],
      "path": Object {
        "data": false,
        "original": "bar",
        "parts": Array [
          "bar",
        ],
        "this": false,
        "type": "PathExpression",
      },
      "type": "MustacheStatement",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) collapses whitespace into single space character 2`] = `"{{foo}} {{bar}}"`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) does not collapse &nbsp; surrounding a text content into a single whitespace 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [],
      "blockParams": Array [],
      "children": Array [
        Object {
          "attributes": Array [],
          "blockParams": Array [],
          "children": Array [
            Object {
              "chars": "  1  ",
              "type": "TextNode",
            },
          ],
          "comments": Array [],
          "modifiers": Array [],
          "selfClosing": false,
          "tag": "span",
          "type": "ElementNode",
        },
        Object {
          "chars": " ",
          "type": "TextNode",
        },
        Object {
          "attributes": Array [],
          "blockParams": Array [],
          "children": Array [
            Object {
              "chars": " 2 ",
              "type": "TextNode",
            },
          ],
          "comments": Array [],
          "modifiers": Array [],
          "selfClosing": false,
          "tag": "span",
          "type": "ElementNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "div",
      "type": "ElementNode",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) does not collapse &nbsp; surrounding a text content into a single whitespace 2`] = `"<div><span> &nbsp;1&nbsp; </span> <span> 2 </span></div>"`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) does not collapse multiple &nbsp; textNode into a single whitespace 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [],
      "blockParams": Array [],
      "children": Array [
        Object {
          "chars": "1",
          "type": "TextNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "span",
      "type": "ElementNode",
    },
    Object {
      "chars": "  ",
      "type": "TextNode",
    },
    Object {
      "attributes": Array [],
      "blockParams": Array [],
      "children": Array [
        Object {
          "chars": "2",
          "type": "TextNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "span",
      "type": "ElementNode",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) does not collapse multiple &nbsp; textNode into a single whitespace 2`] = `"<span>1</span>&nbsp;&nbsp;<span>2</span>"`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) does not collapse whitespace inside of <pre> tags 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [],
      "blockParams": Array [],
      "children": Array [
        Object {
          "chars": "  

   
",
          "type": "TextNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "pre",
      "type": "ElementNode",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) does not collapse whitespace inside of <pre> tags 2`] = `
"<pre>  

   
</pre>"
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) does not collapse whitespace inside of {{#no-minify}} tags in other tags 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [],
      "blockParams": Array [],
      "children": Array [
        Object {
          "chars": "  

   
",
          "type": "TextNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "div",
      "type": "ElementNode",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) does not collapse whitespace inside of {{#no-minify}} tags in other tags 2`] = `
"<div>  

   
</div>"
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) does not minify \`classNames\` specified in .hbs-minifyrc.js 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [
        Object {
          "name": "class",
          "type": "AttrNode",
          "value": Object {
            "chars": "description",
            "type": "TextNode",
          },
        },
      ],
      "blockParams": Array [],
      "children": Array [
        Object {
          "chars": "
  1
  ",
          "type": "TextNode",
        },
        Object {
          "attributes": Array [],
          "blockParams": Array [],
          "children": Array [
            Object {
              "chars": "
    2
  ",
              "type": "TextNode",
            },
          ],
          "comments": Array [],
          "modifiers": Array [],
          "selfClosing": false,
          "tag": "span",
          "type": "ElementNode",
        },
        Object {
          "chars": "
",
          "type": "TextNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "div",
      "type": "ElementNode",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) does not minify \`classNames\` specified in .hbs-minifyrc.js 2`] = `
"<div class=\\"description\\">
  1
  <span>
    2
  </span>
</div>"
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) does not minify \`components\` specified in .hbs-minifyrc.js 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "hash": Object {
        "pairs": Array [],
        "type": "Hash",
      },
      "inverse": null,
      "params": Array [],
      "path": Object {
        "data": false,
        "original": "foo-bar",
        "parts": Array [
          "foo-bar",
        ],
        "this": false,
        "type": "PathExpression",
      },
      "program": Object {
        "blockParams": Array [],
        "body": Array [
          Object {
            "chars": "  ",
            "type": "TextNode",
          },
          Object {
            "attributes": Array [],
            "blockParams": Array [],
            "children": Array [
              Object {
                "chars": "
    yield content
  ",
                "type": "TextNode",
              },
            ],
            "comments": Array [],
            "modifiers": Array [],
            "selfClosing": false,
            "tag": "span",
            "type": "ElementNode",
          },
          Object {
            "chars": "
",
            "type": "TextNode",
          },
        ],
        "type": "Program",
      },
      "type": "BlockStatement",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) does not minify \`components\` specified in .hbs-minifyrc.js 2`] = `
"{{#foo-bar}}  <span>
    yield content
  </span>
{{/foo-bar}}"
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) does not minify \`tagNames\` specified in .hbs-minifyrc.js 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [],
      "blockParams": Array [],
      "children": Array [
        Object {
          "chars": "
  Box 564,
  ",
          "type": "TextNode",
        },
        Object {
          "attributes": Array [],
          "blockParams": Array [],
          "children": Array [
            Object {
              "chars": "
    Disneyland
  ",
              "type": "TextNode",
            },
          ],
          "comments": Array [],
          "modifiers": Array [],
          "selfClosing": false,
          "tag": "b",
          "type": "ElementNode",
        },
        Object {
          "chars": "
  ",
          "type": "TextNode",
        },
        Object {
          "attributes": Array [],
          "blockParams": Array [],
          "children": Array [],
          "comments": Array [],
          "modifiers": Array [],
          "selfClosing": false,
          "tag": "br",
          "type": "ElementNode",
        },
        Object {
          "chars": "
  ",
          "type": "TextNode",
        },
        Object {
          "attributes": Array [],
          "blockParams": Array [],
          "children": Array [
            Object {
              "chars": " USA ",
              "type": "TextNode",
            },
          ],
          "comments": Array [],
          "modifiers": Array [],
          "selfClosing": false,
          "tag": "u",
          "type": "ElementNode",
        },
        Object {
          "chars": "
",
          "type": "TextNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "address",
      "type": "ElementNode",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) does not minify \`tagNames\` specified in .hbs-minifyrc.js 2`] = `
"<address>
  Box 564,
  <b>
    Disneyland
  </b>
  <br>
  <u> USA </u>
</address>"
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) does not strip inside of <pre> tags 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [],
      "blockParams": Array [],
      "children": Array [
        Object {
          "chars": "        ",
          "type": "TextNode",
        },
        Object {
          "escaped": true,
          "hash": Object {
            "pairs": Array [],
            "type": "Hash",
          },
          "params": Array [],
          "path": Object {
            "data": false,
            "original": "foo",
            "parts": Array [
              "foo",
            ],
            "this": false,
            "type": "PathExpression",
          },
          "type": "MustacheStatement",
        },
        Object {
          "chars": "        ",
          "type": "TextNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "pre",
      "type": "ElementNode",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) does not strip inside of <pre> tags 2`] = `"<pre>        {{foo}}        </pre>"`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) does not strip inside of {{#no-minify}} tags 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "chars": "        ",
      "type": "TextNode",
    },
    Object {
      "escaped": true,
      "hash": Object {
        "pairs": Array [],
        "type": "Hash",
      },
      "params": Array [],
      "path": Object {
        "data": false,
        "original": "foo",
        "parts": Array [
          "foo",
        ],
        "this": false,
        "type": "PathExpression",
      },
      "type": "MustacheStatement",
    },
    Object {
      "chars": "        ",
      "type": "TextNode",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) does not strip inside of {{#no-minify}} tags 2`] = `"        {{foo}}        "`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) does not strip inside of {{#no-minify}} tags in other tags 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [],
      "blockParams": Array [],
      "children": Array [
        Object {
          "chars": "        ",
          "type": "TextNode",
        },
        Object {
          "escaped": true,
          "hash": Object {
            "pairs": Array [],
            "type": "Hash",
          },
          "params": Array [],
          "path": Object {
            "data": false,
            "original": "foo",
            "parts": Array [
              "foo",
            ],
            "this": false,
            "type": "PathExpression",
          },
          "type": "MustacheStatement",
        },
        Object {
          "chars": "        ",
          "type": "TextNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "div",
      "type": "ElementNode",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) does not strip inside of {{#no-minify}} tags in other tags 2`] = `"<div>        {{foo}}        </div>"`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) does not strip leading/trailing text from ElementNode nodes 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [],
      "blockParams": Array [],
      "children": Array [
        Object {
          "chars": "x ",
          "type": "TextNode",
        },
        Object {
          "escaped": true,
          "hash": Object {
            "pairs": Array [],
            "type": "Hash",
          },
          "params": Array [],
          "path": Object {
            "data": false,
            "original": "foo",
            "parts": Array [
              "foo",
            ],
            "this": false,
            "type": "PathExpression",
          },
          "type": "MustacheStatement",
        },
        Object {
          "chars": " y ",
          "type": "TextNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "div",
      "type": "ElementNode",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) does not strip leading/trailing text from ElementNode nodes 2`] = `"<div>x {{foo}} y </div>"`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) does not strip leading/trailing text from Program nodes 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "chars": "x ",
      "type": "TextNode",
    },
    Object {
      "escaped": true,
      "hash": Object {
        "pairs": Array [],
        "type": "Hash",
      },
      "params": Array [],
      "path": Object {
        "data": false,
        "original": "foo",
        "parts": Array [
          "foo",
        ],
        "this": false,
        "type": "PathExpression",
      },
      "type": "MustacheStatement",
    },
    Object {
      "chars": " y ",
      "type": "TextNode",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) does not strip leading/trailing text from Program nodes 2`] = `"x {{foo}} y "`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) minifies \`classNames\` that are not specified in .hbs-minifyrc.js 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [
        Object {
          "name": "class",
          "type": "AttrNode",
          "value": Object {
            "chars": "contact-details",
            "type": "TextNode",
          },
        },
      ],
      "blockParams": Array [],
      "children": Array [
        Object {
          "chars": " John Smith ",
          "type": "TextNode",
        },
        Object {
          "attributes": Array [],
          "blockParams": Array [],
          "children": Array [
            Object {
              "chars": " (Entrepreneur) ",
              "type": "TextNode",
            },
          ],
          "comments": Array [],
          "modifiers": Array [],
          "selfClosing": false,
          "tag": "i",
          "type": "ElementNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "div",
      "type": "ElementNode",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) minifies \`classNames\` that are not specified in .hbs-minifyrc.js 2`] = `"<div class=\\"contact-details\\"> John Smith <i> (Entrepreneur) </i></div>"`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) minifies \`components\` that are not specified in .hbs-minifyrc.js 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "hash": Object {
        "pairs": Array [],
        "type": "Hash",
      },
      "inverse": null,
      "params": Array [],
      "path": Object {
        "data": false,
        "original": "my-component",
        "parts": Array [
          "my-component",
        ],
        "this": false,
        "type": "PathExpression",
      },
      "program": Object {
        "blockParams": Array [],
        "body": Array [
          Object {
            "attributes": Array [],
            "blockParams": Array [],
            "children": Array [
              Object {
                "chars": " yield content ",
                "type": "TextNode",
              },
            ],
            "comments": Array [],
            "modifiers": Array [],
            "selfClosing": false,
            "tag": "span",
            "type": "ElementNode",
          },
        ],
        "type": "Program",
      },
      "type": "BlockStatement",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) minifies \`components\` that are not specified in .hbs-minifyrc.js 2`] = `"{{#my-component}}<span> yield content </span>{{/my-component}}"`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) minifies \`tagNames\` that are not specified in .hbs-minifyrc.js 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [],
      "blockParams": Array [],
      "children": Array [
        Object {
          "chars": " Box 564, ",
          "type": "TextNode",
        },
        Object {
          "attributes": Array [],
          "blockParams": Array [],
          "children": Array [
            Object {
              "chars": " Disneyland ",
              "type": "TextNode",
            },
          ],
          "comments": Array [],
          "modifiers": Array [],
          "selfClosing": false,
          "tag": "b",
          "type": "ElementNode",
        },
        Object {
          "chars": " ",
          "type": "TextNode",
        },
        Object {
          "attributes": Array [],
          "blockParams": Array [],
          "children": Array [],
          "comments": Array [],
          "modifiers": Array [],
          "selfClosing": false,
          "tag": "br",
          "type": "ElementNode",
        },
        Object {
          "chars": " ",
          "type": "TextNode",
        },
        Object {
          "attributes": Array [],
          "blockParams": Array [],
          "children": Array [
            Object {
              "chars": " USA ",
              "type": "TextNode",
            },
          ],
          "comments": Array [],
          "modifiers": Array [],
          "selfClosing": false,
          "tag": "u",
          "type": "ElementNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "section",
      "type": "ElementNode",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) minifies \`tagNames\` that are not specified in .hbs-minifyrc.js 2`] = `"<section> Box 564, <b> Disneyland </b> <br> <u> USA </u></section>"`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) strips leading and trailing whitespace from ElementNode nodes 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [],
      "blockParams": Array [],
      "children": Array [
        Object {
          "escaped": true,
          "hash": Object {
            "pairs": Array [],
            "type": "Hash",
          },
          "params": Array [],
          "path": Object {
            "data": false,
            "original": "foo",
            "parts": Array [
              "foo",
            ],
            "this": false,
            "type": "PathExpression",
          },
          "type": "MustacheStatement",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "div",
      "type": "ElementNode",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) strips leading and trailing whitespace from ElementNode nodes 2`] = `"<div>{{foo}}</div>"`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) strips leading and trailing whitespace from Program nodes 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "escaped": true,
      "hash": Object {
        "pairs": Array [],
        "type": "Hash",
      },
      "params": Array [],
      "path": Object {
        "data": false,
        "original": "foo",
        "parts": Array [
          "foo",
        ],
        "this": false,
        "type": "PathExpression",
      },
      "type": "MustacheStatement",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.35.11) strips leading and trailing whitespace from Program nodes 2`] = `"{{foo}}"`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) collapses whitespace into single space character 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "escaped": true,
      "hash": Object {
        "pairs": Array [],
        "type": "Hash",
      },
      "params": Array [],
      "path": Object {
        "data": false,
        "original": "foo",
        "parts": Array [
          "foo",
        ],
        "this": false,
        "type": "PathExpression",
      },
      "type": "MustacheStatement",
    },
    Object {
      "chars": " ",
      "type": "TextNode",
    },
    Object {
      "escaped": true,
      "hash": Object {
        "pairs": Array [],
        "type": "Hash",
      },
      "params": Array [],
      "path": Object {
        "data": false,
        "original": "bar",
        "parts": Array [
          "bar",
        ],
        "this": false,
        "type": "PathExpression",
      },
      "type": "MustacheStatement",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) collapses whitespace into single space character 2`] = `"{{foo}} {{bar}}"`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) does not collapse &nbsp; surrounding a text content into a single whitespace 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [],
      "blockParams": Array [],
      "children": Array [
        Object {
          "attributes": Array [],
          "blockParams": Array [],
          "children": Array [
            Object {
              "chars": "  1  ",
              "type": "TextNode",
            },
          ],
          "comments": Array [],
          "modifiers": Array [],
          "selfClosing": false,
          "tag": "span",
          "type": "ElementNode",
        },
        Object {
          "chars": " ",
          "type": "TextNode",
        },
        Object {
          "attributes": Array [],
          "blockParams": Array [],
          "children": Array [
            Object {
              "chars": " 2 ",
              "type": "TextNode",
            },
          ],
          "comments": Array [],
          "modifiers": Array [],
          "selfClosing": false,
          "tag": "span",
          "type": "ElementNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "div",
      "type": "ElementNode",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) does not collapse &nbsp; surrounding a text content into a single whitespace 2`] = `"<div><span> &nbsp;1&nbsp; </span> <span> 2 </span></div>"`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) does not collapse multiple &nbsp; textNode into a single whitespace 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [],
      "blockParams": Array [],
      "children": Array [
        Object {
          "chars": "1",
          "type": "TextNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "span",
      "type": "ElementNode",
    },
    Object {
      "chars": "  ",
      "type": "TextNode",
    },
    Object {
      "attributes": Array [],
      "blockParams": Array [],
      "children": Array [
        Object {
          "chars": "2",
          "type": "TextNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "span",
      "type": "ElementNode",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) does not collapse multiple &nbsp; textNode into a single whitespace 2`] = `"<span>1</span>&nbsp;&nbsp;<span>2</span>"`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) does not collapse whitespace inside of <pre> tags 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [],
      "blockParams": Array [],
      "children": Array [
        Object {
          "chars": "  

   
",
          "type": "TextNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "pre",
      "type": "ElementNode",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) does not collapse whitespace inside of <pre> tags 2`] = `
"<pre>  

   
</pre>"
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) does not collapse whitespace inside of {{#no-minify}} tags in other tags 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [],
      "blockParams": Array [],
      "children": Array [
        Object {
          "chars": "  

   
",
          "type": "TextNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "div",
      "type": "ElementNode",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) does not collapse whitespace inside of {{#no-minify}} tags in other tags 2`] = `
"<div>  

   
</div>"
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) does not minify \`classNames\` specified in .hbs-minifyrc.js 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [
        Object {
          "name": "class",
          "type": "AttrNode",
          "value": Object {
            "chars": "description",
            "type": "TextNode",
          },
        },
      ],
      "blockParams": Array [],
      "children": Array [
        Object {
          "chars": "
  1
  ",
          "type": "TextNode",
        },
        Object {
          "attributes": Array [],
          "blockParams": Array [],
          "children": Array [
            Object {
              "chars": "
    2
  ",
              "type": "TextNode",
            },
          ],
          "comments": Array [],
          "modifiers": Array [],
          "selfClosing": false,
          "tag": "span",
          "type": "ElementNode",
        },
        Object {
          "chars": "
",
          "type": "TextNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "div",
      "type": "ElementNode",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) does not minify \`classNames\` specified in .hbs-minifyrc.js 2`] = `
"<div class=\\"description\\">
  1
  <span>
    2
  </span>
</div>"
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) does not minify \`components\` specified in .hbs-minifyrc.js 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "hash": Object {
        "pairs": Array [],
        "type": "Hash",
      },
      "inverse": null,
      "params": Array [],
      "path": Object {
        "data": false,
        "original": "foo-bar",
        "parts": Array [
          "foo-bar",
        ],
        "this": false,
        "type": "PathExpression",
      },
      "program": Object {
        "blockParams": Array [],
        "body": Array [
          Object {
            "chars": "  ",
            "type": "TextNode",
          },
          Object {
            "attributes": Array [],
            "blockParams": Array [],
            "children": Array [
              Object {
                "chars": "
    yield content
  ",
                "type": "TextNode",
              },
            ],
            "comments": Array [],
            "modifiers": Array [],
            "selfClosing": false,
            "tag": "span",
            "type": "ElementNode",
          },
          Object {
            "chars": "
",
            "type": "TextNode",
          },
        ],
        "type": "Program",
      },
      "type": "BlockStatement",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) does not minify \`components\` specified in .hbs-minifyrc.js 2`] = `
"{{#foo-bar}}  <span>
    yield content
  </span>
{{/foo-bar}}"
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) does not minify \`tagNames\` specified in .hbs-minifyrc.js 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [],
      "blockParams": Array [],
      "children": Array [
        Object {
          "chars": "
  Box 564,
  ",
          "type": "TextNode",
        },
        Object {
          "attributes": Array [],
          "blockParams": Array [],
          "children": Array [
            Object {
              "chars": "
    Disneyland
  ",
              "type": "TextNode",
            },
          ],
          "comments": Array [],
          "modifiers": Array [],
          "selfClosing": false,
          "tag": "b",
          "type": "ElementNode",
        },
        Object {
          "chars": "
  ",
          "type": "TextNode",
        },
        Object {
          "attributes": Array [],
          "blockParams": Array [],
          "children": Array [],
          "comments": Array [],
          "modifiers": Array [],
          "selfClosing": false,
          "tag": "br",
          "type": "ElementNode",
        },
        Object {
          "chars": "
  ",
          "type": "TextNode",
        },
        Object {
          "attributes": Array [],
          "blockParams": Array [],
          "children": Array [
            Object {
              "chars": " USA ",
              "type": "TextNode",
            },
          ],
          "comments": Array [],
          "modifiers": Array [],
          "selfClosing": false,
          "tag": "u",
          "type": "ElementNode",
        },
        Object {
          "chars": "
",
          "type": "TextNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "address",
      "type": "ElementNode",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) does not minify \`tagNames\` specified in .hbs-minifyrc.js 2`] = `
"<address>
  Box 564,
  <b>
    Disneyland
  </b>
  <br>
  <u> USA </u>
</address>"
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) does not strip inside of <pre> tags 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [],
      "blockParams": Array [],
      "children": Array [
        Object {
          "chars": "        ",
          "type": "TextNode",
        },
        Object {
          "escaped": true,
          "hash": Object {
            "pairs": Array [],
            "type": "Hash",
          },
          "params": Array [],
          "path": Object {
            "data": false,
            "original": "foo",
            "parts": Array [
              "foo",
            ],
            "this": false,
            "type": "PathExpression",
          },
          "type": "MustacheStatement",
        },
        Object {
          "chars": "        ",
          "type": "TextNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "pre",
      "type": "ElementNode",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) does not strip inside of <pre> tags 2`] = `"<pre>        {{foo}}        </pre>"`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) does not strip inside of {{#no-minify}} tags 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "chars": "        ",
      "type": "TextNode",
    },
    Object {
      "escaped": true,
      "hash": Object {
        "pairs": Array [],
        "type": "Hash",
      },
      "params": Array [],
      "path": Object {
        "data": false,
        "original": "foo",
        "parts": Array [
          "foo",
        ],
        "this": false,
        "type": "PathExpression",
      },
      "type": "MustacheStatement",
    },
    Object {
      "chars": "        ",
      "type": "TextNode",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) does not strip inside of {{#no-minify}} tags 2`] = `"        {{foo}}        "`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) does not strip inside of {{#no-minify}} tags in other tags 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [],
      "blockParams": Array [],
      "children": Array [
        Object {
          "chars": "        ",
          "type": "TextNode",
        },
        Object {
          "escaped": true,
          "hash": Object {
            "pairs": Array [],
            "type": "Hash",
          },
          "params": Array [],
          "path": Object {
            "data": false,
            "original": "foo",
            "parts": Array [
              "foo",
            ],
            "this": false,
            "type": "PathExpression",
          },
          "type": "MustacheStatement",
        },
        Object {
          "chars": "        ",
          "type": "TextNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "div",
      "type": "ElementNode",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) does not strip inside of {{#no-minify}} tags in other tags 2`] = `"<div>        {{foo}}        </div>"`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) does not strip leading/trailing text from ElementNode nodes 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [],
      "blockParams": Array [],
      "children": Array [
        Object {
          "chars": "x ",
          "type": "TextNode",
        },
        Object {
          "escaped": true,
          "hash": Object {
            "pairs": Array [],
            "type": "Hash",
          },
          "params": Array [],
          "path": Object {
            "data": false,
            "original": "foo",
            "parts": Array [
              "foo",
            ],
            "this": false,
            "type": "PathExpression",
          },
          "type": "MustacheStatement",
        },
        Object {
          "chars": " y ",
          "type": "TextNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "div",
      "type": "ElementNode",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) does not strip leading/trailing text from ElementNode nodes 2`] = `"<div>x {{foo}} y </div>"`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) does not strip leading/trailing text from Program nodes 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "chars": "x ",
      "type": "TextNode",
    },
    Object {
      "escaped": true,
      "hash": Object {
        "pairs": Array [],
        "type": "Hash",
      },
      "params": Array [],
      "path": Object {
        "data": false,
        "original": "foo",
        "parts": Array [
          "foo",
        ],
        "this": false,
        "type": "PathExpression",
      },
      "type": "MustacheStatement",
    },
    Object {
      "chars": " y ",
      "type": "TextNode",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) does not strip leading/trailing text from Program nodes 2`] = `"x {{foo}} y "`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) minifies \`classNames\` that are not specified in .hbs-minifyrc.js 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [
        Object {
          "name": "class",
          "type": "AttrNode",
          "value": Object {
            "chars": "contact-details",
            "type": "TextNode",
          },
        },
      ],
      "blockParams": Array [],
      "children": Array [
        Object {
          "chars": " John Smith ",
          "type": "TextNode",
        },
        Object {
          "attributes": Array [],
          "blockParams": Array [],
          "children": Array [
            Object {
              "chars": " (Entrepreneur) ",
              "type": "TextNode",
            },
          ],
          "comments": Array [],
          "modifiers": Array [],
          "selfClosing": false,
          "tag": "i",
          "type": "ElementNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "div",
      "type": "ElementNode",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) minifies \`classNames\` that are not specified in .hbs-minifyrc.js 2`] = `"<div class=\\"contact-details\\"> John Smith <i> (Entrepreneur) </i></div>"`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) minifies \`components\` that are not specified in .hbs-minifyrc.js 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "hash": Object {
        "pairs": Array [],
        "type": "Hash",
      },
      "inverse": null,
      "params": Array [],
      "path": Object {
        "data": false,
        "original": "my-component",
        "parts": Array [
          "my-component",
        ],
        "this": false,
        "type": "PathExpression",
      },
      "program": Object {
        "blockParams": Array [],
        "body": Array [
          Object {
            "attributes": Array [],
            "blockParams": Array [],
            "children": Array [
              Object {
                "chars": " yield content ",
                "type": "TextNode",
              },
            ],
            "comments": Array [],
            "modifiers": Array [],
            "selfClosing": false,
            "tag": "span",
            "type": "ElementNode",
          },
        ],
        "type": "Program",
      },
      "type": "BlockStatement",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) minifies \`components\` that are not specified in .hbs-minifyrc.js 2`] = `"{{#my-component}}<span> yield content </span>{{/my-component}}"`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) minifies \`tagNames\` that are not specified in .hbs-minifyrc.js 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [],
      "blockParams": Array [],
      "children": Array [
        Object {
          "chars": " Box 564, ",
          "type": "TextNode",
        },
        Object {
          "attributes": Array [],
          "blockParams": Array [],
          "children": Array [
            Object {
              "chars": " Disneyland ",
              "type": "TextNode",
            },
          ],
          "comments": Array [],
          "modifiers": Array [],
          "selfClosing": false,
          "tag": "b",
          "type": "ElementNode",
        },
        Object {
          "chars": " ",
          "type": "TextNode",
        },
        Object {
          "attributes": Array [],
          "blockParams": Array [],
          "children": Array [],
          "comments": Array [],
          "modifiers": Array [],
          "selfClosing": false,
          "tag": "br",
          "type": "ElementNode",
        },
        Object {
          "chars": " ",
          "type": "TextNode",
        },
        Object {
          "attributes": Array [],
          "blockParams": Array [],
          "children": Array [
            Object {
              "chars": " USA ",
              "type": "TextNode",
            },
          ],
          "comments": Array [],
          "modifiers": Array [],
          "selfClosing": false,
          "tag": "u",
          "type": "ElementNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "section",
      "type": "ElementNode",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) minifies \`tagNames\` that are not specified in .hbs-minifyrc.js 2`] = `"<section> Box 564, <b> Disneyland </b> <br> <u> USA </u></section>"`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) strips leading and trailing whitespace from ElementNode nodes 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [],
      "blockParams": Array [],
      "children": Array [
        Object {
          "escaped": true,
          "hash": Object {
            "pairs": Array [],
            "type": "Hash",
          },
          "params": Array [],
          "path": Object {
            "data": false,
            "original": "foo",
            "parts": Array [
              "foo",
            ],
            "this": false,
            "type": "PathExpression",
          },
          "type": "MustacheStatement",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "div",
      "type": "ElementNode",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) strips leading and trailing whitespace from ElementNode nodes 2`] = `"<div>{{foo}}</div>"`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) strips leading and trailing whitespace from Program nodes 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "escaped": true,
      "hash": Object {
        "pairs": Array [],
        "type": "Hash",
      },
      "params": Array [],
      "path": Object {
        "data": false,
        "original": "foo",
        "parts": Array [
          "foo",
        ],
        "this": false,
        "type": "PathExpression",
      },
      "type": "MustacheStatement",
    },
  ],
  "type": "Program",
}
`;

exports[`HBS Minifier plugin (with @glimmer/syntax v0.37.1) strips leading and trailing whitespace from Program nodes 2`] = `"{{foo}}"`;

exports[`HBS Minifier plugin collapses whitespace into single space character 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "escaped": true,
      "hash": Object {
        "pairs": Array [],
        "type": "Hash",
      },
      "params": Array [],
      "path": Object {
        "data": false,
        "original": "foo",
        "parts": Array [
          "foo",
        ],
        "this": false,
        "type": "PathExpression",
      },
      "type": "MustacheStatement",
    },
    Object {
      "chars": " ",
      "type": "TextNode",
    },
    Object {
      "escaped": true,
      "hash": Object {
        "pairs": Array [],
        "type": "Hash",
      },
      "params": Array [],
      "path": Object {
        "data": false,
        "original": "bar",
        "parts": Array [
          "bar",
        ],
        "this": false,
        "type": "PathExpression",
      },
      "type": "MustacheStatement",
    },
  ],
  "type": "Template",
}
`;

exports[`HBS Minifier plugin collapses whitespace into single space character 2`] = `"{{foo}} {{bar}}"`;

exports[`HBS Minifier plugin does not collapse &nbsp; surrounding a text content into a single whitespace 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [],
      "blockParams": Array [],
      "children": Array [
        Object {
          "attributes": Array [],
          "blockParams": Array [],
          "children": Array [
            Object {
              "chars": "  1  ",
              "type": "TextNode",
            },
          ],
          "comments": Array [],
          "modifiers": Array [],
          "selfClosing": false,
          "tag": "span",
          "type": "ElementNode",
        },
        Object {
          "chars": " ",
          "type": "TextNode",
        },
        Object {
          "attributes": Array [],
          "blockParams": Array [],
          "children": Array [
            Object {
              "chars": " 2 ",
              "type": "TextNode",
            },
          ],
          "comments": Array [],
          "modifiers": Array [],
          "selfClosing": false,
          "tag": "span",
          "type": "ElementNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "div",
      "type": "ElementNode",
    },
  ],
  "type": "Template",
}
`;

exports[`HBS Minifier plugin does not collapse &nbsp; surrounding a text content into a single whitespace 2`] = `"<div><span> &nbsp;1&nbsp; </span> <span> 2 </span></div>"`;

exports[`HBS Minifier plugin does not collapse multiple &nbsp; textNode into a single whitespace 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [],
      "blockParams": Array [],
      "children": Array [
        Object {
          "chars": "1",
          "type": "TextNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "span",
      "type": "ElementNode",
    },
    Object {
      "chars": "  ",
      "type": "TextNode",
    },
    Object {
      "attributes": Array [],
      "blockParams": Array [],
      "children": Array [
        Object {
          "chars": "2",
          "type": "TextNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "span",
      "type": "ElementNode",
    },
  ],
  "type": "Template",
}
`;

exports[`HBS Minifier plugin does not collapse multiple &nbsp; textNode into a single whitespace 2`] = `"<span>1</span>&nbsp;&nbsp;<span>2</span>"`;

exports[`HBS Minifier plugin does not collapse whitespace inside of <pre> tags 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [],
      "blockParams": Array [],
      "children": Array [
        Object {
          "chars": "  

   
",
          "type": "TextNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "pre",
      "type": "ElementNode",
    },
  ],
  "type": "Template",
}
`;

exports[`HBS Minifier plugin does not collapse whitespace inside of <pre> tags 2`] = `
"<pre>  

   
</pre>"
`;

exports[`HBS Minifier plugin does not collapse whitespace inside of {{#no-minify}} tags in other tags 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [],
      "blockParams": Array [],
      "children": Array [
        Object {
          "chars": "  

   
",
          "type": "TextNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "div",
      "type": "ElementNode",
    },
  ],
  "type": "Template",
}
`;

exports[`HBS Minifier plugin does not collapse whitespace inside of {{#no-minify}} tags in other tags 2`] = `
"<div>  

   
</div>"
`;

exports[`HBS Minifier plugin does not minify \`classNames\` specified in .hbs-minifyrc.js 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [
        Object {
          "name": "class",
          "type": "AttrNode",
          "value": Object {
            "chars": "description",
            "type": "TextNode",
          },
        },
      ],
      "blockParams": Array [],
      "children": Array [
        Object {
          "chars": "
  1
  ",
          "type": "TextNode",
        },
        Object {
          "attributes": Array [],
          "blockParams": Array [],
          "children": Array [
            Object {
              "chars": "
    2
  ",
              "type": "TextNode",
            },
          ],
          "comments": Array [],
          "modifiers": Array [],
          "selfClosing": false,
          "tag": "span",
          "type": "ElementNode",
        },
        Object {
          "chars": "
",
          "type": "TextNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "div",
      "type": "ElementNode",
    },
  ],
  "type": "Template",
}
`;

exports[`HBS Minifier plugin does not minify \`classNames\` specified in .hbs-minifyrc.js 2`] = `
"<div class=\\"description\\">
  1
  <span>
    2
  </span>
</div>"
`;

exports[`HBS Minifier plugin does not minify \`components\` specified in .hbs-minifyrc.js 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "hash": Object {
        "pairs": Array [],
        "type": "Hash",
      },
      "inverse": null,
      "params": Array [],
      "path": Object {
        "data": false,
        "original": "foo-bar",
        "parts": Array [
          "foo-bar",
        ],
        "this": false,
        "type": "PathExpression",
      },
      "program": Object {
        "blockParams": Array [],
        "body": Array [
          Object {
            "chars": "  ",
            "type": "TextNode",
          },
          Object {
            "attributes": Array [],
            "blockParams": Array [],
            "children": Array [
              Object {
                "chars": "
    yield content
  ",
                "type": "TextNode",
              },
            ],
            "comments": Array [],
            "modifiers": Array [],
            "selfClosing": false,
            "tag": "span",
            "type": "ElementNode",
          },
          Object {
            "chars": "
",
            "type": "TextNode",
          },
        ],
        "type": "Block",
      },
      "type": "BlockStatement",
    },
  ],
  "type": "Template",
}
`;

exports[`HBS Minifier plugin does not minify \`components\` specified in .hbs-minifyrc.js 2`] = `
"{{#foo-bar}}  <span>
    yield content
  </span>
{{/foo-bar}}"
`;

exports[`HBS Minifier plugin does not minify \`tagNames\` specified in .hbs-minifyrc.js 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [],
      "blockParams": Array [],
      "children": Array [
        Object {
          "chars": "
  Box 564,
  ",
          "type": "TextNode",
        },
        Object {
          "attributes": Array [],
          "blockParams": Array [],
          "children": Array [
            Object {
              "chars": "
    Disneyland
  ",
              "type": "TextNode",
            },
          ],
          "comments": Array [],
          "modifiers": Array [],
          "selfClosing": false,
          "tag": "b",
          "type": "ElementNode",
        },
        Object {
          "chars": "
  ",
          "type": "TextNode",
        },
        Object {
          "attributes": Array [],
          "blockParams": Array [],
          "children": Array [],
          "comments": Array [],
          "modifiers": Array [],
          "selfClosing": false,
          "tag": "br",
          "type": "ElementNode",
        },
        Object {
          "chars": "
  ",
          "type": "TextNode",
        },
        Object {
          "attributes": Array [],
          "blockParams": Array [],
          "children": Array [
            Object {
              "chars": " USA ",
              "type": "TextNode",
            },
          ],
          "comments": Array [],
          "modifiers": Array [],
          "selfClosing": false,
          "tag": "u",
          "type": "ElementNode",
        },
        Object {
          "chars": "
",
          "type": "TextNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "address",
      "type": "ElementNode",
    },
  ],
  "type": "Template",
}
`;

exports[`HBS Minifier plugin does not minify \`tagNames\` specified in .hbs-minifyrc.js 2`] = `
"<address>
  Box 564,
  <b>
    Disneyland
  </b>
  <br>
  <u> USA </u>
</address>"
`;

exports[`HBS Minifier plugin does not strip inside of <pre> tags 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [],
      "blockParams": Array [],
      "children": Array [
        Object {
          "chars": "        ",
          "type": "TextNode",
        },
        Object {
          "escaped": true,
          "hash": Object {
            "pairs": Array [],
            "type": "Hash",
          },
          "params": Array [],
          "path": Object {
            "data": false,
            "original": "foo",
            "parts": Array [
              "foo",
            ],
            "this": false,
            "type": "PathExpression",
          },
          "type": "MustacheStatement",
        },
        Object {
          "chars": "        ",
          "type": "TextNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "pre",
      "type": "ElementNode",
    },
  ],
  "type": "Template",
}
`;

exports[`HBS Minifier plugin does not strip inside of <pre> tags 2`] = `"<pre>        {{foo}}        </pre>"`;

exports[`HBS Minifier plugin does not strip inside of {{#no-minify}} tags 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "chars": "        ",
      "type": "TextNode",
    },
    Object {
      "escaped": true,
      "hash": Object {
        "pairs": Array [],
        "type": "Hash",
      },
      "params": Array [],
      "path": Object {
        "data": false,
        "original": "foo",
        "parts": Array [
          "foo",
        ],
        "this": false,
        "type": "PathExpression",
      },
      "type": "MustacheStatement",
    },
    Object {
      "chars": "        ",
      "type": "TextNode",
    },
  ],
  "type": "Template",
}
`;

exports[`HBS Minifier plugin does not strip inside of {{#no-minify}} tags 2`] = `"        {{foo}}        "`;

exports[`HBS Minifier plugin does not strip inside of {{#no-minify}} tags in other tags 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [],
      "blockParams": Array [],
      "children": Array [
        Object {
          "chars": "        ",
          "type": "TextNode",
        },
        Object {
          "escaped": true,
          "hash": Object {
            "pairs": Array [],
            "type": "Hash",
          },
          "params": Array [],
          "path": Object {
            "data": false,
            "original": "foo",
            "parts": Array [
              "foo",
            ],
            "this": false,
            "type": "PathExpression",
          },
          "type": "MustacheStatement",
        },
        Object {
          "chars": "        ",
          "type": "TextNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "div",
      "type": "ElementNode",
    },
  ],
  "type": "Template",
}
`;

exports[`HBS Minifier plugin does not strip inside of {{#no-minify}} tags in other tags 2`] = `"<div>        {{foo}}        </div>"`;

exports[`HBS Minifier plugin does not strip leading/trailing text from ElementNode nodes 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [],
      "blockParams": Array [],
      "children": Array [
        Object {
          "chars": "x ",
          "type": "TextNode",
        },
        Object {
          "escaped": true,
          "hash": Object {
            "pairs": Array [],
            "type": "Hash",
          },
          "params": Array [],
          "path": Object {
            "data": false,
            "original": "foo",
            "parts": Array [
              "foo",
            ],
            "this": false,
            "type": "PathExpression",
          },
          "type": "MustacheStatement",
        },
        Object {
          "chars": " y ",
          "type": "TextNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "div",
      "type": "ElementNode",
    },
  ],
  "type": "Template",
}
`;

exports[`HBS Minifier plugin does not strip leading/trailing text from ElementNode nodes 2`] = `"<div>x {{foo}} y </div>"`;

exports[`HBS Minifier plugin does not strip leading/trailing text from Program nodes 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "chars": "x ",
      "type": "TextNode",
    },
    Object {
      "escaped": true,
      "hash": Object {
        "pairs": Array [],
        "type": "Hash",
      },
      "params": Array [],
      "path": Object {
        "data": false,
        "original": "foo",
        "parts": Array [
          "foo",
        ],
        "this": false,
        "type": "PathExpression",
      },
      "type": "MustacheStatement",
    },
    Object {
      "chars": " y ",
      "type": "TextNode",
    },
  ],
  "type": "Template",
}
`;

exports[`HBS Minifier plugin does not strip leading/trailing text from Program nodes 2`] = `"x {{foo}} y "`;

exports[`HBS Minifier plugin minifies \`classNames\` that are not specified in .hbs-minifyrc.js 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [
        Object {
          "name": "class",
          "type": "AttrNode",
          "value": Object {
            "chars": "contact-details",
            "type": "TextNode",
          },
        },
      ],
      "blockParams": Array [],
      "children": Array [
        Object {
          "chars": " John Smith ",
          "type": "TextNode",
        },
        Object {
          "attributes": Array [],
          "blockParams": Array [],
          "children": Array [
            Object {
              "chars": " (Entrepreneur) ",
              "type": "TextNode",
            },
          ],
          "comments": Array [],
          "modifiers": Array [],
          "selfClosing": false,
          "tag": "i",
          "type": "ElementNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "div",
      "type": "ElementNode",
    },
  ],
  "type": "Template",
}
`;

exports[`HBS Minifier plugin minifies \`classNames\` that are not specified in .hbs-minifyrc.js 2`] = `"<div class=\\"contact-details\\"> John Smith <i> (Entrepreneur) </i></div>"`;

exports[`HBS Minifier plugin minifies \`components\` that are not specified in .hbs-minifyrc.js 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "hash": Object {
        "pairs": Array [],
        "type": "Hash",
      },
      "inverse": null,
      "params": Array [],
      "path": Object {
        "data": false,
        "original": "my-component",
        "parts": Array [
          "my-component",
        ],
        "this": false,
        "type": "PathExpression",
      },
      "program": Object {
        "blockParams": Array [],
        "body": Array [
          Object {
            "attributes": Array [],
            "blockParams": Array [],
            "children": Array [
              Object {
                "chars": " yield content ",
                "type": "TextNode",
              },
            ],
            "comments": Array [],
            "modifiers": Array [],
            "selfClosing": false,
            "tag": "span",
            "type": "ElementNode",
          },
        ],
        "type": "Block",
      },
      "type": "BlockStatement",
    },
  ],
  "type": "Template",
}
`;

exports[`HBS Minifier plugin minifies \`components\` that are not specified in .hbs-minifyrc.js 2`] = `"{{#my-component}}<span> yield content </span>{{/my-component}}"`;

exports[`HBS Minifier plugin minifies \`tagNames\` that are not specified in .hbs-minifyrc.js 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [],
      "blockParams": Array [],
      "children": Array [
        Object {
          "chars": " Box 564, ",
          "type": "TextNode",
        },
        Object {
          "attributes": Array [],
          "blockParams": Array [],
          "children": Array [
            Object {
              "chars": " Disneyland ",
              "type": "TextNode",
            },
          ],
          "comments": Array [],
          "modifiers": Array [],
          "selfClosing": false,
          "tag": "b",
          "type": "ElementNode",
        },
        Object {
          "chars": " ",
          "type": "TextNode",
        },
        Object {
          "attributes": Array [],
          "blockParams": Array [],
          "children": Array [],
          "comments": Array [],
          "modifiers": Array [],
          "selfClosing": false,
          "tag": "br",
          "type": "ElementNode",
        },
        Object {
          "chars": " ",
          "type": "TextNode",
        },
        Object {
          "attributes": Array [],
          "blockParams": Array [],
          "children": Array [
            Object {
              "chars": " USA ",
              "type": "TextNode",
            },
          ],
          "comments": Array [],
          "modifiers": Array [],
          "selfClosing": false,
          "tag": "u",
          "type": "ElementNode",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "section",
      "type": "ElementNode",
    },
  ],
  "type": "Template",
}
`;

exports[`HBS Minifier plugin minifies \`tagNames\` that are not specified in .hbs-minifyrc.js 2`] = `"<section> Box 564, <b> Disneyland </b> <br> <u> USA </u></section>"`;

exports[`HBS Minifier plugin strips leading and trailing whitespace from ElementNode nodes 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "attributes": Array [],
      "blockParams": Array [],
      "children": Array [
        Object {
          "escaped": true,
          "hash": Object {
            "pairs": Array [],
            "type": "Hash",
          },
          "params": Array [],
          "path": Object {
            "data": false,
            "original": "foo",
            "parts": Array [
              "foo",
            ],
            "this": false,
            "type": "PathExpression",
          },
          "type": "MustacheStatement",
        },
      ],
      "comments": Array [],
      "modifiers": Array [],
      "selfClosing": false,
      "tag": "div",
      "type": "ElementNode",
    },
  ],
  "type": "Template",
}
`;

exports[`HBS Minifier plugin strips leading and trailing whitespace from ElementNode nodes 2`] = `"<div>{{foo}}</div>"`;

exports[`HBS Minifier plugin strips leading and trailing whitespace from Program nodes 1`] = `
Object {
  "blockParams": Array [],
  "body": Array [
    Object {
      "escaped": true,
      "hash": Object {
        "pairs": Array [],
        "type": "Hash",
      },
      "params": Array [],
      "path": Object {
        "data": false,
        "original": "foo",
        "parts": Array [
          "foo",
        ],
        "this": false,
        "type": "PathExpression",
      },
      "type": "MustacheStatement",
    },
  ],
  "type": "Template",
}
`;

exports[`HBS Minifier plugin strips leading and trailing whitespace from Program nodes 2`] = `"{{foo}}"`;
